Configure swagger full

--- a/WebApplication/WebAPI/appsettings.Development.json
+++ b/WebApplication/WebAPI/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
-  "DOTNET_APP_ID": "DONET App from appsettings Development"
+  "DOTNET_APP_ID": "DONET App from appsettings Development",
+  "ConnectionStrings": {
+    "BookDb": "Server=localhost;Database=bookdb;Port=5432;Username=admin;Password=admin"
+  }
 }
